--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -26,5 +26,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
+          platforms: linux/amd64,linux/arm64/v8,linux/s390x,linux/ppc64le
           push: true
           tags: dylanmtaylor/squid-network-proxy:latest
